--- a/app/src/main/res/layout/fragment_edit_ingredient_details.xml
+++ b/app/src/main/res/layout/fragment_edit_ingredient_details.xml
@@ -62,6 +62,7 @@
                             android:id="@+id/tfTiempoPrepPrep"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:imeOptions="actionDone"
                             android:inputType="number"
                             android:maxLines="1" />
 
