--- a/app/src/main/res/layout/fragment_add_recipe_data.xml
+++ b/app/src/main/res/layout/fragment_add_recipe_data.xml
@@ -41,10 +41,9 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="12dp"
-                android:divider="@drawable/divider"
+                android:divider="@drawable/divider_small"
                 android:orientation="vertical"
-                android:showDividers="middle"
-                app:layout_constraintVertical_bias="0">
+                android:showDividers="middle">
 
                 <!--Image View para imagen de receta-->
                 <com.google.android.material.card.MaterialCardView
@@ -63,9 +62,12 @@
 
                 <!--Text Input para nombre de receta-->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tflNombreReceta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/nombre_receta_label">
+                    android:hint="@string/nombre_receta_label"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="35">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/tfNombreReceta"
@@ -78,9 +80,12 @@
 
                 <!--Text Input para autor de receta-->
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/tflAutorReceta"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/autor_receta_label">
+                    android:hint="@string/autor_receta_label"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="35">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/tfAutorReceta"
@@ -116,6 +121,7 @@
                     style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:hint="@string/tiempo_receta_label">
 
                     <AutoCompleteTextView
