--- a/app/src/main/res/layout/fragment_cooking.xml
+++ b/app/src/main/res/layout/fragment_cooking.xml
@@ -35,7 +35,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:visibility="invisible"
+        tools:visibility="">
 
         <ImageView
             android:layout_width="wrap_content"
