--- a/app/src/main/res/layout/fragment_cook_step.xml
+++ b/app/src/main/res/layout/fragment_cook_step.xml
@@ -84,7 +84,7 @@
                                 app:layout_constraintEnd_toEndOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                tools:progress="80" />
+                                tools:progress="70" />
 
                             <TextView
                                 android:id="@+id/tvPbTiempoPrep"
@@ -98,7 +98,7 @@
                                 app:layout_constraintTop_toTopOf="@+id/pbTiempoPrep" />
 
                             <com.airbnb.lottie.LottieAnimationView
-                                android:id="@+id/animTempDone"
+                                android:id="@+id/animTempDoneCheck"
                                 android:layout_width="140dp"
                                 android:layout_height="140dp"
                                 app:lottie_colorFilter="?attr/colorPrimary"
